# Test

./: CMakeLists.txt  precompiled.cpp  precompiled.h
sources/: machine.h  machine.inl  machine_call.cpp  machine_call.h
test/: test_call_dll.cpp  unit_test.cpp
test/data/: input.txt  result.txt
